// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RBAC legacy: decision de requireRole matriz de decision: cada rol real contra cada grupo y cada rol real 1`] = `
{
  "acp_comercial": [
    "acp_comercial",
  ],
  "admin": [],
  "backoffice_comercial": [],
  "calidad": [
    "jefe_calidad",
  ],
  "comercial": [
    "acp_comercial",
    "comercial",
    "jefe_comercial",
  ],
  "esp_app": [],
  "esp_app_ext": [],
  "ext_users": [
    "ing_servicio_ext",
  ],
  "financiero": [
    "financiero",
  ],
  "finanzas": [
    "financiero",
    "jefe_financiero",
  ],
  "gerencia": [
    "gerencia_general",
  ],
  "gerencia_general": [
    "gerencia_general",
  ],
  "ing_servicio": [
    "ing_servicio",
  ],
  "ing_servicio_ext": [
    "ing_servicio_ext",
  ],
  "jefe_calidad": [
    "jefe_calidad",
  ],
  "jefe_comercial": [
    "jefe_comercial",
  ],
  "jefe_financiero": [
    "jefe_financiero",
  ],
  "jefe_finanzas": [],
  "jefe_logistica": [
    "jefe_logistica",
  ],
  "jefe_operaciones": [
    "jefe_operaciones",
  ],
  "jefe_servicio": [
    "jefe_servicio",
  ],
  "jefe_servicio_tecnico": [],
  "jefe_talento_humano": [],
  "jefe_tecnico": [
    "jefe_servicio",
  ],
  "jefe_ti": [
    "jefe_ti",
  ],
  "logistica": [
    "logistica",
  ],
  "operaciones": [
    "jefe_operaciones",
    "operaciones",
  ],
  "pasante": [
    "pasante",
  ],
  "servicio_tecnico": [
    "ing_servicio",
    "jefe_servicio",
  ],
  "support_ti": [
    "ing_servicio",
    "jefe_servicio",
    "jefe_ti",
  ],
  "talento_humano": [
    "talento_humano",
  ],
  "tecnico": [
    "ing_servicio",
    "jefe_servicio",
  ],
  "ti": [
    "jefe_ti",
  ],
}
`;

exports[`RBAC legacy: grupos de roles ROLE_GROUPS no cambia sin actualizar esta foto 1`] = `
{
  "admin": [
    "admin",
    "administrador",
  ],
  "backoffice_comercial": [
    "backoffice_comercial",
  ],
  "calidad": [
    "calidad",
    "jefe_calidad",
  ],
  "comercial": [
    "comercial",
    "jefe_comercial",
    "backoffice_comercial",
    "asesor_comercial",
    "analista_comercial",
    "acp_comercial",
    "backoffice",
  ],
  "esp_app": [
    "esp_app",
  ],
  "esp_app_ext": [
    "esp_app_ext",
  ],
  "ext_users": [
    "ing_servicio_ext",
    "esp_app_ext",
  ],
  "finanzas": [
    "finanzas",
    "financiero",
    "jefe_finanzas",
    "jefe_de_finanzas",
    "contador",
    "jefe_financiero",
  ],
  "gerencia": [
    "gerencia",
    "gerencia_general",
    "gerente_general",
    "director",
    "gerente",
  ],
  "ing_servicio": [
    "ing_servicio",
    "tecnico",
  ],
  "ing_servicio_ext": [
    "ing_servicio_ext",
  ],
  "jefe_calidad": [
    "jefe_calidad",
    "jefe_de_calidad",
  ],
  "jefe_comercial": [
    "jefe_comercial",
  ],
  "jefe_finanzas": [
    "jefe_finanzas",
    "jefe_de_finanzas",
  ],
  "jefe_operaciones": [
    "jefe_operaciones",
    "jefe_de_operaciones",
  ],
  "jefe_servicio": [
    "jefe_servicio",
    "jefe_tecnico",
    "jefe_de_tecnico",
    "jefe_servicio_tecnico",
    "jefe_de_servicio_tecnico",
  ],
  "jefe_servicio_tecnico": [
    "jefe_servicio_tecnico",
    "jefe_de_servicio_tecnico",
  ],
  "jefe_talento_humano": [
    "jefe_talento_humano",
    "jefe_de_talento_humano",
  ],
  "jefe_tecnico": [
    "jefe_tecnico",
    "jefe_de_tecnico",
    "jefe_servicio",
    "jefe_servicio_tecnico",
    "jefe_de_servicio_tecnico",
  ],
  "jefe_ti": [
    "jefe_ti",
    "jefe_de_ti",
  ],
  "operaciones": [
    "operaciones",
    "jefe_operaciones",
    "jefe_de_operaciones",
    "analista_operaciones",
  ],
  "pasante": [
    "pasante",
  ],
  "servicio_tecnico": [
    "servicio_tecnico",
    "tecnico",
    "ing_servicio",
    "esp_app",
    "responsable_tecnico",
    "jefe_servicio_tecnico",
    "jefe_de_servicio_tecnico",
    "jefe_tecnico",
    "jefe_servicio",
    "jefe_de_tecnico",
  ],
  "support_ti": [
    "ti",
    "jefe_ti",
    "admin_ti",
    "jefe_de_ti",
    "tecnico",
    "ing_servicio",
    "esp_app",
    "jefe_tecnico",
    "jefe_servicio",
    "servicio_tecnico",
    "jefe_servicio_tecnico",
  ],
  "talento_humano": [
    "talento_humano",
    "jefe_talento_humano",
    "jefe_de_talento_humano",
    "analista_talento_humano",
    "asistente_talento_humano",
    "auxiliar_talento_humano",
    "rh",
    "rrhh",
  ],
  "tecnico": [
    "tecnico",
    "ing_servicio",
    "esp_app",
    "servicio_tecnico",
    "responsable_tecnico",
    "jefe_servicio_tecnico",
    "jefe_de_servicio_tecnico",
    "jefe_tecnico",
    "jefe_servicio",
    "jefe_de_tecnico",
  ],
  "ti": [
    "ti",
    "jefe_ti",
    "jefe_de_ti",
    "desarrollador",
    "soporte",
  ],
}
`;
